--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h3>All of Netflix, starting at just ₹ 199.</h3>
             <p>Ready to watch? Enter your email to create or restart your membership.</p>
             <input type="email" name="email" id="mail" placeholder="Email address">
-            <a href="#" class="btn btn-lg">GET STARTED ></a>
+            <a href="#" class="btn btn-lg">GET STARTED</a>
         </div>
     </header>
 
@@ -68,7 +68,7 @@
             <p>Ready to watch? Enter your email to create or restart your membership.</p>
             <div class="input">
                 <input type="email" name="email" placeholder="Email Address">
-                <a href="#" class="btn-rounded"><button>GET STARTED ></button></a>
+                <a href="#" class="btn-rounded"><button>GET STARTED</button></a>
             </div>
         </div>
     </section>
